# qt-app-example

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_onedir.spec  build_onefile.spec  pyproject.toml
app/: main.py
app/constants/: __init__.py  app_identity.py  data_schema.py
app/controllers/: app_controller.py
app/models/: app_model.py
app/services/: data_store.py  map_service.py  rdf_service.py  simulator_service.py
app/services/api/: __init__.py  asgi_app.py  threaded_server.py
app/utils/: app_settings.py  datetime_utils.py  logging_config.py  target_color.py  windows_title_bar.py
app/views/: _detachable_tab.py  main_window.py  map_view.py  rdf_view.py  settings_dialog.py  simulator_view.py  spectrum_view.py  table_view.py  toolbar.py  tree_view.py  waterfall_view.py
app/web/: index.html
app/web/js/: script.js
app/web/leaflet/: index.html
app/web/leaflet/js/: leaflet-realtime_2.0.0.min.js  script.js
app/web/maplibre/: index.html
app/web/maplibre/js/: map-brightness.js  ruler.js  script.js  sensor-overlay.js  style-selector.js
