[project]
name = "pyqt-app-example"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.0"
dependencies = [
    "pyqt6==6.10.2",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pyinstaller==6.19.0",
    "ruff==0.15.1",
]
